<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/account_settings_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.AccountSettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/account_settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_profile_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_close_black_48"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/save_info_profile_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="15dp"
                    android:src="@drawable/baseline_check_black_48"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image_view_profile_fragment"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout_profile"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/change_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/account_settings_text_image_change"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_view_profile_fragment" />

    <EditText
        android:id="@+id/full_name_profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="name"
        android:hint="@string/account_settings_hint_name"
        android:inputType="text|textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_image_btn" />

    <EditText
        android:id="@+id/username_profile_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="nickname"
        android:hint="@string/account_settings_hint_nickname"
        android:inputType="text|textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/full_name_profile_fragment" />

    <EditText
        android:id="@+id/bio_profile_fragment_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="about"
        android:hint="@string/account_settings_hint_about"
        android:inputType="text|textCapWords"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username_profile_fragment" />

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/inputs_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/account_settings_btn_logout"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/delete_account_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_background"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/account_settings_btn_delete_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/privacy_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/privacy_btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:background="@android:color/transparent"
        android:text="@string/signup_btn_policy"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>